// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`loaded 1`] = `
.c23 {
  box-sizing: border-box;
  width: 80px;
  text-align: center;
}

.c24 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  color: #FFFFFF;
  background: rgba(255,255,255,0);
  border: 1px solid rgba(255,255,255,0.36);
  font-size: 10px;
  min-height: 24px;
  padding: 0px 16px;
}

.c24:hover,
.c24:focus {
  background: rgba(255,255,255,0.07);
}

.c24:active {
  background: rgba(255,255,255,0.13);
}

.c24:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
  cursor: auto;
}

.c17 {
  display: inline-block;
  transition: color 0.3s;
  color: #FFFFFF;
  font-size: 16px;
}

.c21 {
  display: inline-block;
  transition: color 0.3s;
  color: #FFFFFF;
}

.c22 {
  display: inline-block;
  transition: color 0.3s;
  color: #FFFFFF;
  margin-right: 16px;
  padding: 4px;
  font-size: 16px;
}

.c25 {
  display: inline-block;
  transition: color 0.3s;
  color: #FFFFFF;
  margin-left: 4px;
  color: rgba(255,255,255,0.72);
  font-size: 14px;
}

.c14 {
  align-items: center;
  border: none;
  cursor: pointer;
  display: flex;
  outline: none;
  border-radius: 50%;
  overflow: visible;
  justify-content: center;
  text-align: center;
  flex: 0 0 auto;
  background: transparent;
  color: inherit;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  font-size: 16px;
  height: 32px;
  width: 32px;
  margin-left: 0px;
  margin-right: 0px;
}

.c14 .c16 {
  color: inherit;
}

.c14:disabled {
  color: rgba(255,255,255,0.36);
}

.c14:disabled {
  color: rgba(255,255,255,0.36);
  cursor: default;
}

.c14:hover:enabled,
.c14:focus:enabled {
  background: rgba(255,255,255,0.13);
}

.c14:active:enabled {
  background: rgba(255,255,255,0.18);
}

.c18 {
  align-items: center;
  border: none;
  cursor: pointer;
  display: flex;
  outline: none;
  border-radius: 50%;
  overflow: visible;
  justify-content: center;
  text-align: center;
  flex: 0 0 auto;
  background: transparent;
  color: inherit;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  font-size: 16px;
  height: 32px;
  width: 32px;
  margin-left: 0px;
}

.c18 .c16 {
  color: inherit;
}

.c18:disabled {
  color: rgba(255,255,255,0.36);
}

.c18:disabled {
  color: rgba(255,255,255,0.36);
  cursor: default;
}

.c18:hover:enabled,
.c18:focus:enabled {
  background: rgba(255,255,255,0.13);
}

.c18:active:enabled {
  background: rgba(255,255,255,0.18);
}

.c12 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 400;
  font-size: 12px;
  line-height: 16px;
  margin: 0px;
  margin-right: 4px;
  color: #FFFFFF;
}

.c10 {
  box-sizing: border-box;
  width: 100%;
  display: flex;
  justify-content: flex-end;
}

.c11 {
  box-sizing: border-box;
  margin-right: 8px;
  display: flex;
  align-items: center;
}

.c13 {
  box-sizing: border-box;
  display: flex;
}

.c1 {
  box-sizing: border-box;
  margin-bottom: 24px;
  display: flex;
  align-items: center;
  justify-content: space-between;
  flex-shrink: 0;
  border-bottom: 1px solid rgba(255,255,255,0.07);
  height: 56px;
  margin-left: -40px;
  margin-right: -40px;
  padding-left: 40px;
  padding-right: 40px;
}

.c2 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
  margin: 0px;
  white-space: nowrap;
}

.c0 {
  box-sizing: border-box;
  padding-left: 40px;
  padding-right: 40px;
  display: flex;
  width: 100%;
  height: 100%;
  flex-direction: column;
}

.c0::after {
  content: ' ';
  padding-bottom: 24px;
}

.c19 {
  background: #222C59;
  border-collapse: collapse;
  border-spacing: 0;
  border-style: hidden;
  font-size: 12px;
  width: 100%;
  border-top-left-radius: 0px;
  border-top-right-radius: 0px;
  border-bottom-right-radius: 8px;
  border-bottom-left-radius: 8px;
}

.c19 > thead > tr > th,
.c19 > tbody > tr > th,
.c19 > tfoot > tr > th,
.c19 > thead > tr > td,
.c19 > tbody > tr > td,
.c19 > tfoot > tr > td {
  padding: 8px 8px;
  vertical-align: middle;
}

.c19 > thead > tr > th:first-child,
.c19 > tbody > tr > th:first-child,
.c19 > tfoot > tr > th:first-child,
.c19 > thead > tr > td:first-child,
.c19 > tbody > tr > td:first-child,
.c19 > tfoot > tr > td:first-child {
  padding-left: 24px;
}

.c19 > thead > tr > th:last-child,
.c19 > tbody > tr > th:last-child,
.c19 > tfoot > tr > th:last-child,
.c19 > thead > tr > td:last-child,
.c19 > tbody > tr > td:last-child,
.c19 > tfoot > tr > td:last-child {
  padding-right: 24px;
}

.c19 > tbody > tr > td {
  vertical-align: middle;
}

.c19 > thead > tr > th {
  background: rgba(255,255,255,0.07);
  color: #FFFFFF;
  cursor: pointer;
  font-size: 10px;
  font-weight: 400;
  padding-bottom: 0;
  padding-top: 0;
  text-align: left;
  opacity: 0.75;
  text-transform: uppercase;
  white-space: nowrap;
}

.c19 > thead > tr > th .c16 {
  font-weight: bold;
  font-size: 8px;
  margin-left: 8px;
}

.c19 > tbody > tr > td {
  color: #FFFFFF;
  line-height: 16px;
}

.c19 tbody tr {
  border-bottom: 1px solid rgb(49,58,100);
}

.c19 tbody tr:hover {
  background-color: rgba(255,255,255,0.07);
}

.c4 {
  padding: 16px 24px;
  display: flex;
  height: 24px;
  flex-shrink: 0;
  align-items: center;
  justify-content: space-between;
  background: #222C59;
}

.c3 {
  box-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px rgba(0,0,0,0.14),0px 1px 3px rgba(0,0,0,0.12);
  overflow: hidden;
  border-radius: 8px;
}

.c15 .c16 {
  font-size: 20px;
}

.c15 .c16:before {
  padding-left: 1px;
}

.c9 {
  position: relative;
  height: 100%;
  right: 0;
  display: flex;
  align-items: center;
  justify-content: center;
  background: rgba(255,255,255,0.07);
  border-radius: 200px;
}

.c8 {
  position: absolute;
  height: 100%;
  right: 0;
  display: flex;
  align-items: center;
  justify-content: center;
  background: #222C59;
  border-radius: 200px;
}

.c6 {
  position: relative;
  display: flex;
  overflow: hidden;
  width: 100%;
  border-radius: 200px;
  height: 32px;
  background: transparent;
}

.c5 {
  background: #0C143D;
  border-radius: 200px;
  width: 100%;
  height: 32px;
}

.c7 {
  border: none;
  outline: none;
  box-sizing: border-box;
  height: 100%;
  font-size: 12px;
  width: 100%;
  transition: all 0.2s;
  padding-left: 16px;
  padding-right: 16px;
  color: #FFFFFF;
  background: #0C143D;
  padding-right: 184px;
}

.c7:hover,
.c7:focus,
.c7:active {
  color: #FFFFFF;
  background: rgba(255,255,255,0.07);
}

.c7::placeholder {
  color: rgba(255,255,255,0.54);
  font-size: 12px;
}

.c20 tbody > tr > td {
  vertical-align: middle;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <div
      class="c2"
    >
      Active Sessions
    </div>
  </div>
  <div
    class="c3"
  >
    <nav
      class="c4"
    >
      <div
        class="c5"
      >
        <div
          class="c6"
        >
          <input
            class="c7"
            placeholder="SEARCH..."
            value=""
          />
          <div
            class="c8"
          >
            <div
              class="c9"
            />
          </div>
        </div>
      </div>
      <div
        class="c10"
        width="100%"
      >
        <div
          class="c11"
        >
          <div
            class="c12"
            color="text.main"
            style="white-space: nowrap; text-transform: uppercase;"
          >
            Showing 
            <strong>
              1
            </strong>
             - 
            <strong>
              7
            </strong>
             of
             
            <strong>
              7
            </strong>
          </div>
        </div>
        <div
          class="c13"
        >
          <button
            class="c14 c15"
            disabled=""
            title="Previous page"
          >
            <span
              class="c16 c17 icon icon-arrow-left-circle "
              font-size="3"
            />
          </button>
          <button
            class="c18 c15"
            disabled=""
            title="Next page"
          >
            <span
              class="c16 c17 icon icon-arrow-right-circle "
              font-size="3"
            />
          </button>
        </div>
      </div>
    </nav>
    <table
      class="c19 c20"
    >
      <thead>
        <tr>
          <th>
            <a>
              Type
              <span
                class="c16 c21 icon icon-chevrons-expand-vertical "
                title="sort items"
              />
            </a>
          </th>
          <th>
            <a>
              Name
              <span
                class="c16 c21 icon icon-chevrons-expand-vertical "
                title="sort items"
              />
            </a>
          </th>
          <th
            style="cursor: default;"
          >
            Session ID
          </th>
          <th
            style="cursor: default;"
          >
            Users
          </th>
          <th>
            <a>
              Duration
              <span
                class="c16 c21 icon icon-chevron-up "
                title="sort items asc"
              />
            </a>
          </th>
          <th
            style="cursor: default;"
          />
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>
            <span
              class="c16 c22 icon icon-kubernetes c16 c22"
              font-size="3"
            />
          </td>
          <td>
            minikube
          </td>
          <td>
            7174aded-340a-4863-b661-7ba52aeb22c8
          </td>
          <td>
            lisa2
          </td>
          <td>
            59 minutes
          </td>
          <td
            align="right"
            height="26px"
          />
        </tr>
        <tr>
          <td>
            <span
              class="c16 c22 icon icon-terminal c16 c22"
              font-size="3"
            />
          </td>
          <td>
            im-a-nodename
          </td>
          <td>
            c7befbb4-3885-4d08-a466-de832a73c3d4
          </td>
          <td>
            lisa2
          </td>
          <td>
            5 seconds
          </td>
          <td
            align="right"
            height="26px"
          >
            <div
              class="c23"
              width="80px"
            >
              <button
                class="c24"
                kind="border"
              >
                Join
                <span
                  class="c16 c25 icon icon-caret-down "
                  color="text.slightlyMuted"
                  font-size="2"
                />
              </button>
            </div>
          </td>
        </tr>
        <tr>
          <td>
            <span
              class="c16 c22 icon icon-terminal c16 c22"
              font-size="3"
            />
          </td>
          <td>
            im-a-nodename-2
          </td>
          <td>
            b204924e-6b74-5d92-89ea-d95043a969f1
          </td>
          <td>
            lisa3
          </td>
          <td>
            5 seconds
          </td>
          <td
            align="right"
            height="26px"
          >
            <div
              class="c23"
              width="80px"
            >
              <button
                class="c24"
                kind="border"
              >
                Join
                <span
                  class="c16 c25 icon icon-caret-down "
                  color="text.slightlyMuted"
                  font-size="2"
                />
              </button>
            </div>
          </td>
        </tr>
        <tr>
          <td>
            <span
              class="c16 c22 icon icon-terminal c16 c22"
              font-size="3"
            />
          </td>
          <td>
            im-a-nodename-3
          </td>
          <td>
            8830cfe5-369e-5485-9c3d-19cc50e6f548
          </td>
          <td>
            lisa2
          </td>
          <td>
            5 seconds
          </td>
          <td
            align="right"
            height="26px"
          >
            <div
              class="c23"
              width="80px"
            >
              <button
                class="c24"
                kind="border"
              >
                Join
                <span
                  class="c16 c25 icon icon-caret-down "
                  color="text.slightlyMuted"
                  font-size="2"
                />
              </button>
            </div>
          </td>
        </tr>
        <tr>
          <td>
            <span
              class="c16 c22 icon icon-desktop c16 c22"
              font-size="3"
            />
          </td>
          <td>
            desktop-2
          </td>
          <td>
            acacfbb4-3885-4d08-a466-de832a73ffac
          </td>
          <td>
            lisa2
          </td>
          <td>
            5 seconds
          </td>
          <td
            align="right"
            height="26px"
          />
        </tr>
        <tr>
          <td>
            <span
              class="c16 c22 icon icon-database c16 c22"
              font-size="3"
            />
          </td>
          <td>
            databse-32
          </td>
          <td>
            2314fbb4-3885-4d08-a466-de832a731222
          </td>
          <td>
            lisa2
          </td>
          <td>
            3 minutes
          </td>
          <td
            align="right"
            height="26px"
          />
        </tr>
        <tr>
          <td>
            <span
              class="c16 c22 icon icon-new-tab c16 c22"
              font-size="3"
            />
          </td>
          <td>
            grafana
          </td>
          <td>
            cafefbb4-3885-4d08-a466-de832a7313131
          </td>
          <td>
            lisa2
          </td>
          <td>
            13 minutes
          </td>
          <td
            align="right"
            height="26px"
          />
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`loaded with CTA 1`] = `
.c3 {
  box-sizing: border-box;
  width: 340px;
}

.c27 {
  box-sizing: border-box;
  width: 80px;
  text-align: center;
}

.c4 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  color: #000000;
  background: #9F85FF;
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
  padding-top: 12px;
  padding-bottom: 12px;
  width: 100%;
  height: 36px;
}

.c4:hover,
.c4:focus {
  background: #B29DFF;
}

.c4:active {
  background: #C5B6FF;
}

.c4:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
  cursor: auto;
}

.c28 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  color: #FFFFFF;
  background: rgba(255,255,255,0);
  border: 1px solid rgba(255,255,255,0.36);
  font-size: 10px;
  min-height: 24px;
  padding: 0px 16px;
}

.c28:hover,
.c28:focus {
  background: rgba(255,255,255,0.07);
}

.c28:active {
  background: rgba(255,255,255,0.13);
}

.c28:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
  cursor: auto;
}

.c7 {
  display: inline-block;
  transition: color 0.3s;
  color: #FFFFFF;
}

.c22 {
  display: inline-block;
  transition: color 0.3s;
  color: #FFFFFF;
  font-size: 16px;
}

.c26 {
  display: inline-block;
  transition: color 0.3s;
  color: #FFFFFF;
  margin-right: 16px;
  padding: 4px;
  font-size: 16px;
}

.c29 {
  display: inline-block;
  transition: color 0.3s;
  color: #FFFFFF;
  margin-left: 4px;
  color: rgba(255,255,255,0.72);
  font-size: 14px;
}

.c20 {
  align-items: center;
  border: none;
  cursor: pointer;
  display: flex;
  outline: none;
  border-radius: 50%;
  overflow: visible;
  justify-content: center;
  text-align: center;
  flex: 0 0 auto;
  background: transparent;
  color: inherit;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  font-size: 16px;
  height: 32px;
  width: 32px;
  margin-left: 0px;
  margin-right: 0px;
}

.c20 .c6 {
  color: inherit;
}

.c20:disabled {
  color: rgba(255,255,255,0.36);
}

.c20:disabled {
  color: rgba(255,255,255,0.36);
  cursor: default;
}

.c20:hover:enabled,
.c20:focus:enabled {
  background: rgba(255,255,255,0.13);
}

.c20:active:enabled {
  background: rgba(255,255,255,0.18);
}

.c23 {
  align-items: center;
  border: none;
  cursor: pointer;
  display: flex;
  outline: none;
  border-radius: 50%;
  overflow: visible;
  justify-content: center;
  text-align: center;
  flex: 0 0 auto;
  background: transparent;
  color: inherit;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  font-size: 16px;
  height: 32px;
  width: 32px;
  margin-left: 0px;
}

.c23 .c6 {
  color: inherit;
}

.c23:disabled {
  color: rgba(255,255,255,0.36);
}

.c23:disabled {
  color: rgba(255,255,255,0.36);
  cursor: default;
}

.c23:hover:enabled,
.c23:focus:enabled {
  background: rgba(255,255,255,0.13);
}

.c23:active:enabled {
  background: rgba(255,255,255,0.18);
}

.c18 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 400;
  font-size: 12px;
  line-height: 16px;
  margin: 0px;
  margin-right: 4px;
  color: #FFFFFF;
}

.c5 {
  box-sizing: border-box;
  display: flex;
  align-items: center;
}

.c16 {
  box-sizing: border-box;
  width: 100%;
  display: flex;
  justify-content: flex-end;
}

.c17 {
  box-sizing: border-box;
  margin-right: 8px;
  display: flex;
  align-items: center;
}

.c19 {
  box-sizing: border-box;
  display: flex;
}

.c1 {
  box-sizing: border-box;
  margin-bottom: 24px;
  display: flex;
  align-items: center;
  justify-content: space-between;
  flex-shrink: 0;
  border-bottom: 1px solid rgba(255,255,255,0.07);
  height: 56px;
  margin-left: -40px;
  margin-right: -40px;
  padding-left: 40px;
  padding-right: 40px;
}

.c2 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
  margin: 0px;
  white-space: nowrap;
}

.c0 {
  box-sizing: border-box;
  padding-left: 40px;
  padding-right: 40px;
  display: flex;
  width: 100%;
  height: 100%;
  flex-direction: column;
}

.c0::after {
  content: ' ';
  padding-bottom: 24px;
}

.c8 {
  color: inherit;
  font-weight: 500;
  font-size: 15px;
  margin-right: 10px;
}

.c24 {
  background: #222C59;
  border-collapse: collapse;
  border-spacing: 0;
  border-style: hidden;
  font-size: 12px;
  width: 100%;
  border-top-left-radius: 0px;
  border-top-right-radius: 0px;
  border-bottom-right-radius: 8px;
  border-bottom-left-radius: 8px;
}

.c24 > thead > tr > th,
.c24 > tbody > tr > th,
.c24 > tfoot > tr > th,
.c24 > thead > tr > td,
.c24 > tbody > tr > td,
.c24 > tfoot > tr > td {
  padding: 8px 8px;
  vertical-align: middle;
}

.c24 > thead > tr > th:first-child,
.c24 > tbody > tr > th:first-child,
.c24 > tfoot > tr > th:first-child,
.c24 > thead > tr > td:first-child,
.c24 > tbody > tr > td:first-child,
.c24 > tfoot > tr > td:first-child {
  padding-left: 24px;
}

.c24 > thead > tr > th:last-child,
.c24 > tbody > tr > th:last-child,
.c24 > tfoot > tr > th:last-child,
.c24 > thead > tr > td:last-child,
.c24 > tbody > tr > td:last-child,
.c24 > tfoot > tr > td:last-child {
  padding-right: 24px;
}

.c24 > tbody > tr > td {
  vertical-align: middle;
}

.c24 > thead > tr > th {
  background: rgba(255,255,255,0.07);
  color: #FFFFFF;
  cursor: pointer;
  font-size: 10px;
  font-weight: 400;
  padding-bottom: 0;
  padding-top: 0;
  text-align: left;
  opacity: 0.75;
  text-transform: uppercase;
  white-space: nowrap;
}

.c24 > thead > tr > th .c6 {
  font-weight: bold;
  font-size: 8px;
  margin-left: 8px;
}

.c24 > tbody > tr > td {
  color: #FFFFFF;
  line-height: 16px;
}

.c24 tbody tr {
  border-bottom: 1px solid rgb(49,58,100);
}

.c24 tbody tr:hover {
  background-color: rgba(255,255,255,0.07);
}

.c10 {
  padding: 16px 24px;
  display: flex;
  height: 24px;
  flex-shrink: 0;
  align-items: center;
  justify-content: space-between;
  background: #222C59;
}

.c9 {
  box-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px rgba(0,0,0,0.14),0px 1px 3px rgba(0,0,0,0.12);
  overflow: hidden;
  border-radius: 8px;
}

.c21 .c6 {
  font-size: 20px;
}

.c21 .c6:before {
  padding-left: 1px;
}

.c15 {
  position: relative;
  height: 100%;
  right: 0;
  display: flex;
  align-items: center;
  justify-content: center;
  background: rgba(255,255,255,0.07);
  border-radius: 200px;
}

.c14 {
  position: absolute;
  height: 100%;
  right: 0;
  display: flex;
  align-items: center;
  justify-content: center;
  background: #222C59;
  border-radius: 200px;
}

.c12 {
  position: relative;
  display: flex;
  overflow: hidden;
  width: 100%;
  border-radius: 200px;
  height: 32px;
  background: transparent;
}

.c11 {
  background: #0C143D;
  border-radius: 200px;
  width: 100%;
  height: 32px;
}

.c13 {
  border: none;
  outline: none;
  box-sizing: border-box;
  height: 100%;
  font-size: 12px;
  width: 100%;
  transition: all 0.2s;
  padding-left: 16px;
  padding-right: 16px;
  color: #FFFFFF;
  background: #0C143D;
  padding-right: 184px;
}

.c13:hover,
.c13:focus,
.c13:active {
  color: #FFFFFF;
  background: rgba(255,255,255,0.07);
}

.c13::placeholder {
  color: rgba(255,255,255,0.54);
  font-size: 12px;
}

.c25 tbody > tr > td {
  vertical-align: middle;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <div
      class="c2"
    >
      Active Sessions
    </div>
    <div
      class="c3"
      width="340px"
    >
      <a
        class="c4"
        height="36px"
        href="https://goteleport.com/r/upgrade-team?4.4.0-dev&utm_campaign=CTA_ACTIVE_SESSIONS"
        kind="primary"
        style="text-transform: none;"
        target="blank"
        width="100%"
      >
        <div
          class="c5"
        >
          <span
            class="c6 c7 icon icon-unlock c8"
          />
          Join Active Sessions With Teleport Enterprise
        </div>
      </a>
    </div>
  </div>
  <div
    class="c9"
  >
    <nav
      class="c10"
    >
      <div
        class="c11"
      >
        <div
          class="c12"
        >
          <input
            class="c13"
            placeholder="SEARCH..."
            value=""
          />
          <div
            class="c14"
          >
            <div
              class="c15"
            />
          </div>
        </div>
      </div>
      <div
        class="c16"
        width="100%"
      >
        <div
          class="c17"
        >
          <div
            class="c18"
            color="text.main"
            style="white-space: nowrap; text-transform: uppercase;"
          >
            Showing 
            <strong>
              1
            </strong>
             - 
            <strong>
              7
            </strong>
             of
             
            <strong>
              7
            </strong>
          </div>
        </div>
        <div
          class="c19"
        >
          <button
            class="c20 c21"
            disabled=""
            title="Previous page"
          >
            <span
              class="c6 c22 icon icon-arrow-left-circle "
              font-size="3"
            />
          </button>
          <button
            class="c23 c21"
            disabled=""
            title="Next page"
          >
            <span
              class="c6 c22 icon icon-arrow-right-circle "
              font-size="3"
            />
          </button>
        </div>
      </div>
    </nav>
    <table
      class="c24 c25"
    >
      <thead>
        <tr>
          <th>
            <a>
              Type
              <span
                class="c6 c7 icon icon-chevrons-expand-vertical "
                title="sort items"
              />
            </a>
          </th>
          <th>
            <a>
              Name
              <span
                class="c6 c7 icon icon-chevrons-expand-vertical "
                title="sort items"
              />
            </a>
          </th>
          <th
            style="cursor: default;"
          >
            Session ID
          </th>
          <th
            style="cursor: default;"
          >
            Users
          </th>
          <th>
            <a>
              Duration
              <span
                class="c6 c7 icon icon-chevron-up "
                title="sort items asc"
              />
            </a>
          </th>
          <th
            style="cursor: default;"
          />
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>
            <span
              class="c6 c26 icon icon-kubernetes c6 c26"
              font-size="3"
            />
          </td>
          <td>
            minikube
          </td>
          <td>
            7174aded-340a-4863-b661-7ba52aeb22c8
          </td>
          <td>
            lisa2
          </td>
          <td>
            59 minutes
          </td>
          <td
            align="right"
            height="26px"
          />
        </tr>
        <tr>
          <td>
            <span
              class="c6 c26 icon icon-terminal c6 c26"
              font-size="3"
            />
          </td>
          <td>
            im-a-nodename
          </td>
          <td>
            c7befbb4-3885-4d08-a466-de832a73c3d4
          </td>
          <td>
            lisa2
          </td>
          <td>
            5 seconds
          </td>
          <td
            align="right"
            height="26px"
          >
            <div
              class="c27"
              width="80px"
            >
              <button
                class="c28"
                kind="border"
              >
                Join
                <span
                  class="c6 c29 icon icon-caret-down "
                  color="text.slightlyMuted"
                  font-size="2"
                />
              </button>
            </div>
          </td>
        </tr>
        <tr>
          <td>
            <span
              class="c6 c26 icon icon-terminal c6 c26"
              font-size="3"
            />
          </td>
          <td>
            im-a-nodename-2
          </td>
          <td>
            b204924e-6b74-5d92-89ea-d95043a969f1
          </td>
          <td>
            lisa3
          </td>
          <td>
            5 seconds
          </td>
          <td
            align="right"
            height="26px"
          >
            <div
              class="c27"
              width="80px"
            >
              <button
                class="c28"
                kind="border"
              >
                Join
                <span
                  class="c6 c29 icon icon-caret-down "
                  color="text.slightlyMuted"
                  font-size="2"
                />
              </button>
            </div>
          </td>
        </tr>
        <tr>
          <td>
            <span
              class="c6 c26 icon icon-terminal c6 c26"
              font-size="3"
            />
          </td>
          <td>
            im-a-nodename-3
          </td>
          <td>
            8830cfe5-369e-5485-9c3d-19cc50e6f548
          </td>
          <td>
            lisa2
          </td>
          <td>
            5 seconds
          </td>
          <td
            align="right"
            height="26px"
          >
            <div
              class="c27"
              width="80px"
            >
              <button
                class="c28"
                kind="border"
              >
                Join
                <span
                  class="c6 c29 icon icon-caret-down "
                  color="text.slightlyMuted"
                  font-size="2"
                />
              </button>
            </div>
          </td>
        </tr>
        <tr>
          <td>
            <span
              class="c6 c26 icon icon-desktop c6 c26"
              font-size="3"
            />
          </td>
          <td>
            desktop-2
          </td>
          <td>
            acacfbb4-3885-4d08-a466-de832a73ffac
          </td>
          <td>
            lisa2
          </td>
          <td>
            5 seconds
          </td>
          <td
            align="right"
            height="26px"
          />
        </tr>
        <tr>
          <td>
            <span
              class="c6 c26 icon icon-database c6 c26"
              font-size="3"
            />
          </td>
          <td>
            databse-32
          </td>
          <td>
            2314fbb4-3885-4d08-a466-de832a731222
          </td>
          <td>
            lisa2
          </td>
          <td>
            3 minutes
          </td>
          <td
            align="right"
            height="26px"
          />
        </tr>
        <tr>
          <td>
            <span
              class="c6 c26 icon icon-new-tab c6 c26"
              font-size="3"
            />
          </td>
          <td>
            grafana
          </td>
          <td>
            cafefbb4-3885-4d08-a466-de832a7313131
          </td>
          <td>
            lisa2
          </td>
          <td>
            13 minutes
          </td>
          <td
            align="right"
            height="26px"
          />
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;
